job catagory section is done

--- a/index.html
+++ b/index.html
@@ -41,6 +41,37 @@
             <div> <img src="./assets/images/user.png" alt=""></div>
         </div>
     </header>
+    <main class="max-w-7xl my-24 mx-auto px-5">
+        <section>
+            <h2 class="md:text-5xl sm:text-4xl text-3xl font-extrabold text-center">Job Category List</h2>
+            <p class="text-center font-medium text-gray-500 mt-4 mb-8">Explore thousands of job opportunities with all
+                the
+                information you need.
+                Its your future</p>
+            <div class=" md:grid md:grid-cols-2 md:gap-10 lg:grid-cols-4 lg:gap-5 gap-5 grid mx-5 md:mx-0">
+                <div class="p-8 bg-red-50 rounded-lg">
+                    <img src="./assets/icons/accounts.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <p class="text-gray-400">300 Jobs Available</p>
+                </div>
+                <div class="p-8 bg-red-50 rounded-lg">
+                    <img src="./assets/icons/accounts.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <p class="text-gray-400">300 Jobs Available</p>
+                </div>
+                <div class="p-8 bg-red-50 rounded-lg">
+                    <img src="./assets/icons/accounts.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <p class="text-gray-400">300 Jobs Available</p>
+                </div>
+                <div class="p-8 bg-red-50 rounded-lg">
+                    <img src="./assets/icons/accounts.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <p class="text-gray-400">300 Jobs Available</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
