feature section markup is ready

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
     </header>
     <main class="max-w-7xl my-24 mx-auto px-5">
+        <!-- job category section  -->
         <section>
             <h2 class="md:text-5xl sm:text-4xl text-3xl font-extrabold text-center">Job Category List</h2>
             <p class="text-center font-medium text-gray-500 mt-4 mb-8">Explore thousands of job opportunities with all
@@ -68,6 +69,100 @@
                     <img src="./assets/icons/accounts.png" alt="">
                     <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
                     <p class="text-gray-400">300 Jobs Available</p>
+                </div>
+            </div>
+        </section>
+        <!-- featured section  -->
+        <section class="my-24">
+            <h2 class="md:text-5xl sm:text-4xl text-3xl font-extrabold text-center">Featured Jobs</h2>
+            <p class="text-center font-medium text-gray-500 mt-4 mb-8">Explore thousands of job opportunities with all
+                the
+                information you need.
+                Its your future</p>
+            <div class="grid md:grid-cols-2 gap-6">
+                <div class="box shadow p-5">
+                    <img src="./assets/logo/google.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="flex gap-4 ">
+                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
+                                alt="">Dhaka, Bangladesh</h5>
+                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
+                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/logo/google.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="flex gap-4">
+                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
+                                alt="">Dhaka, Bangladesh</h5>
+                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
+                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/logo/google.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="flex gap-4">
+                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
+                                alt="">Dhaka, Bangladesh</h5>
+                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
+                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
+                </div>
+                <div class="box">
+                    <img src="./assets/logo/google.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="flex gap-4">
+                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
+                                alt="">Dhaka, Bangladesh</h5>
+                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
+                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
                 </div>
             </div>
         </section>
