feature section is fully okay

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 the
                 information you need.
                 Its your future</p>
-            <div class="grid md:grid-cols-2 gap-6">
+            <div class="grid lg:grid-cols-2 gap-6 px-8 lg:px-0">
                 <div class="box shadow p-5">
                     <img src="./assets/logo/google.png" alt="">
                     <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
@@ -91,17 +91,71 @@
                             class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
                             Time</button>
                     </div>
-                    <div class="flex gap-4 ">
-                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
-                                alt="">Dhaka, Bangladesh</h5>
-                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
-                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    <div class="sm:flex gap-5">
+                        <div class="flex items-center">
+                            <img src="./assets/icons/Location.png" alt="">
+                            <h5 class=" text-xl  font-semibold text-gray-500"> Dhaka, Bangladesh</h5>
+                        </div>
+                        <div class="flex items-center">
+                            <img class="brightness-50" src="./assets/icons/money.png" alt="">
+                            <h5 class=" text-xl font-semibold text-gray-500"> Salary : 100K - 150K</h5>
+                        </div>
                     </div>
                     <button
                         class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
                         Details</button>
                 </div>
-                <div class="box">
+                <div class="box shadow p-5">
+                    <img src="./assets/logo/netflix.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="sm:flex gap-5">
+                        <div class="flex items-center">
+                            <img src="./assets/icons/Location.png" alt="">
+                            <h5 class=" text-xl  font-semibold text-gray-500"> Dhaka, Bangladesh</h5>
+                        </div>
+                        <div class="flex items-center">
+                            <img class="brightness-50" src="./assets/icons/money.png" alt="">
+                            <h5 class=" text-xl font-semibold text-gray-500"> Salary : 100K - 150K</h5>
+                        </div>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
+                </div>
+                <div class="box shadow p-5">
+                    <img src="./assets/logo/tesla.png" alt="">
+                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
+                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
+                    <div class="my-4">
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
+                        <button
+                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
+                            Time</button>
+                    </div>
+                    <div class="sm:flex gap-5">
+                        <div class="flex items-center">
+                            <img src="./assets/icons/Location.png" alt="">
+                            <h5 class=" text-xl  font-semibold text-gray-500"> Dhaka, Bangladesh</h5>
+                        </div>
+                        <div class="flex items-center">
+                            <img class="brightness-50" src="./assets/icons/money.png" alt="">
+                            <h5 class=" text-xl font-semibold text-gray-500"> Salary : 100K - 150K</h5>
+                        </div>
+                    </div>
+                    <button
+                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
+                        Details</button>
+                </div>
+                <div class="box shadow p-5">
                     <img src="./assets/logo/google.png" alt="">
                     <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
                     <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
@@ -112,58 +166,21 @@
                             class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
                             Time</button>
                     </div>
-                    <div class="flex gap-4">
-                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
-                                alt="">Dhaka, Bangladesh</h5>
-                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
-                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
+                    <div class="sm:flex gap-5">
+                        <div class="flex items-center">
+                            <img src="./assets/icons/Location.png" alt="">
+                            <h5 class=" text-xl  font-semibold text-gray-500"> Dhaka, Bangladesh</h5>
+                        </div>
+                        <div class="flex items-center">
+                            <img class="brightness-50" src="./assets/icons/money.png" alt="">
+                            <h5 class=" text-xl font-semibold text-gray-500"> Salary : 100K - 150K</h5>
+                        </div>
                     </div>
                     <button
                         class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
                         Details</button>
                 </div>
-                <div class="box">
-                    <img src="./assets/logo/google.png" alt="">
-                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
-                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
-                    <div class="my-4">
-                        <button
-                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
-                        <button
-                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
-                            Time</button>
-                    </div>
-                    <div class="flex gap-4">
-                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
-                                alt="">Dhaka, Bangladesh</h5>
-                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
-                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
-                    </div>
-                    <button
-                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
-                        Details</button>
-                </div>
-                <div class="box">
-                    <img src="./assets/logo/google.png" alt="">
-                    <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
-                    <h5 class="text-xl font-semibold text-gray-500 ">Google LLC</h5>
-                    <div class="my-4">
-                        <button
-                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5 mr-4">Remote</button>
-                        <button
-                            class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent border border-violet-400 rounded font-extrabold py-2 px-5">Full
-                            Time</button>
-                    </div>
-                    <div class="flex gap-4">
-                        <h5 class="flex text-xl  font-semibold text-gray-500"> <img src="./assets/icons/Location.png"
-                                alt="">Dhaka, Bangladesh</h5>
-                        <h5 class="flex text-xl font-semibold text-gray-500"> <img class="brightness-50"
-                                src="./assets/icons/money.png" alt="">Salary : 100K - 150K</h5>
-                    </div>
-                    <button
-                        class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
-                        Details</button>
-                </div>
+
             </div>
         </section>
     </main>
