footer markup is ready

--- a/index.html
+++ b/index.html
@@ -180,10 +180,54 @@
                         class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold mt-7">View
                         Details</button>
                 </div>
-
             </div>
+            <button
+                class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold my-12 mx-auto block">See
+                All Jobs</button>
         </section>
     </main>
+    <footer class="bg-black text-white">
+        <div class="max-w-7xl mt-24 mx-auto px-5">
+            <div class="grid grid-cols-5">
+                <div class="box">
+                    <h2 class="text-xl sm:text-3xl font-extrabold">CareerHub</h2>
+                    <p class="my-5">There are many variations of passages of Lorem Ipsum , but the majority have
+                        suffered alteration
+                        in some form.</p>
+                    <img src="./assets/icons/social.png" alt="">
+                </div>
+                <ul>
+                    <li class="text-xl font-semibold">Company</li>
+                    <li class="text-gray-300">About Us</li>
+                    <li class="text-gray-300">Work</li>
+                    <li class="text-gray-300">Latest News</li>
+                    <li class="text-gray-300">Careers</li>
+                </ul>
+                <ul>
+                    <li class="text-xl font-semibold">Company</li>
+                    <li class="text-gray-300">About Us</li>
+                    <li class="text-gray-300">Work</li>
+                    <li class="text-gray-300">Latest News</li>
+                    <li class="text-gray-300">Careers</li>
+                </ul>
+                <ul>
+                    <li class="text-xl font-semibold">Company</li>
+                    <li class="text-gray-300">About Us</li>
+                    <li class="text-gray-300">Work</li>
+                    <li class="text-gray-300">Latest News</li>
+                    <li class="text-gray-300">Careers</li>
+                </ul>
+                <ul class="">
+                    <li class="text-xl font-semibold">Company</li>
+                    <li class="text-gray-300">About Us</li>
+                    <li class="text-gray-300">Work</li>
+                    <li class="text-gray-300">Latest News</li>
+                    <li class="text-gray-300">Careers</li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 
