--- a/index.html
+++ b/index.html
@@ -186,44 +186,48 @@
                 All Jobs</button>
         </section>
     </main>
-    <footer class="bg-black text-white">
-        <div class="max-w-7xl mt-24 mx-auto px-5">
-            <div class="grid grid-cols-5">
-                <div class="box">
+    <footer class="bg-black text-white py-24">
+        <div class="max-w-7xl  mx-auto px-5 ">
+            <div class="grid md:grid-cols-5 sm:grid-cols-2 gap-12 md:gap-0">
+                <div class="sm:col-span-2 md:col-span-1">
                     <h2 class="text-xl sm:text-3xl font-extrabold">CareerHub</h2>
                     <p class="my-5">There are many variations of passages of Lorem Ipsum , but the majority have
                         suffered alteration
                         in some form.</p>
                     <img src="./assets/icons/social.png" alt="">
                 </div>
-                <ul>
+                <ul class="md:justify-self-end ">
                     <li class="text-xl font-semibold">Company</li>
                     <li class="text-gray-300">About Us</li>
                     <li class="text-gray-300">Work</li>
                     <li class="text-gray-300">Latest News</li>
                     <li class="text-gray-300">Careers</li>
                 </ul>
-                <ul>
+                <ul class="sm:justify-self-end ">
                     <li class="text-xl font-semibold">Company</li>
                     <li class="text-gray-300">About Us</li>
                     <li class="text-gray-300">Work</li>
                     <li class="text-gray-300">Latest News</li>
                     <li class="text-gray-300">Careers</li>
                 </ul>
-                <ul>
+                <ul class="md:justify-self-end ">
                     <li class="text-xl font-semibold">Company</li>
                     <li class="text-gray-300">About Us</li>
                     <li class="text-gray-300">Work</li>
                     <li class="text-gray-300">Latest News</li>
                     <li class="text-gray-300">Careers</li>
                 </ul>
-                <ul class="">
+                <ul class="sm:justify-self-end  ">
                     <li class="text-xl font-semibold">Company</li>
                     <li class="text-gray-300">About Us</li>
                     <li class="text-gray-300">Work</li>
-                    <li class="text-gray-300">Latest News</li>
-                    <li class="text-gray-300">Careers</li>
+
                 </ul>
+            </div>
+            <hr class="my-12">
+            <div class="sm:flex items-center justify-between  ">
+                <p class="text-gray-300">@2023 CareerHub. All Rights Reserved</p>
+                <p class="text-gray-300">Powered by CareerHub</p>
             </div>
 
         </div>
