adding some margin and padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="max-w-7xl my-24 mx-auto px-5">
+    <header class="max-w-7xl my-20 mx-auto px-5">
         <nav class="flex justify-between items-center">
             <h2 class="text-xl sm:text-3xl font-extrabold">CareerHub</h2>
             <ul class="hidden md:flex md:gap-8 text-gray-500 font-medium">
@@ -20,12 +20,12 @@
                 <li><a href="">Blog</a></li>
             </ul>
             <button
-                class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold">Star
+                class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-5 sm:px-7 rounded-lg text-white sm:text-xl font-extrabold">Star
                 Applying</button>
         </nav>
         <div class="lg:flex justify-between items-center py-20">
             <div class="text">
-                <h1 class="sm:text-7xl text-5xl font-extrabold">One Step <br> Closer To Your <br> <span
+                <h1 class="sm:text-7xl text-4xl font-extrabold">One Step <br> Closer To Your <br> <span
                         class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent">Dream
                         Job</span>
                 </h1>
@@ -38,10 +38,10 @@
                     class="bg-gradient-to-l from-[#7E90FE] to-[#9873FF] py-5 px-7 rounded-lg text-white sm:text-xl font-extrabold">Star
                     Applying</button>
             </div>
-            <div> <img src="./assets/images/user.png" alt=""></div>
+            <div class="mt-10 lg:mt-0"> <img src="./assets/images/user.png" alt=""></div>
         </div>
     </header>
-    <main class="max-w-7xl my-24 mx-auto px-5">
+    <main class="max-w-7xl mb-24 mx-auto px-5">
         <!-- job category section  -->
         <section>
             <h2 class="md:text-5xl sm:text-4xl text-3xl font-extrabold text-center">Job Category List</h2>
@@ -79,7 +79,7 @@
                 the
                 information you need.
                 Its your future</p>
-            <div class="grid lg:grid-cols-2 gap-6 px-8 lg:px-0">
+            <div class="grid lg:grid-cols-2 gap-6 sm:px-8 lg:px-0">
                 <div class="box shadow p-5">
                     <img src="./assets/logo/google.png" alt="">
                     <h4 class="mt-8 mb-2 text-xl font-extrabold">Account & Finance</h4>
